refactor: Change public class declarations to package-private in test classes for better encapsulation